chore: fastify 4 + abandon Koa + deps upgrade

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uvue",
   "description": "Universal Vue - SSR (Server side rendered) for Vue CLI with ease",
-  "repository": "https://github.com/universal-vue/uvue",
+  "repository": "https://github.com/vallo87/uvue",
   "author": "Simon Babay <simon@babay.fr>",
   "license": "MIT",
   "private": true,
@@ -20,10 +20,10 @@
     "packages/tests/*"
   ],
   "devDependencies": {
-    "@vue/babel-preset-app": "^4.2.3",
-    "@vue/cli": "^4.2.3",
-    "@vue/cli-plugin-typescript": "^4.2.3",
-    "@vue/cli-test-utils": "^4.2.3",
+    "@vue/babel-preset-app": "^4.5.19",
+    "@vue/cli": "^4.5.19",
+    "@vue/cli-plugin-typescript": "^4.5.19",
+    "@vue/cli-test-utils": "^4.5.19",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "cheerio": "^1.0.0-rc.2",
@@ -39,7 +39,7 @@
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "serve": "^10.0.2",
-    "vue-template-compiler": "^2.6.2",
+    "vue-template-compiler": "^2.7.14",
     "wait-on": "^2.1.0",
     "yargs": "^12.0.1"
   }
