--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,6 @@
 {
-  "packages": [
-    "packages/@uvue/*",
-    "packages/tests/*"
-  ],
-  "version": "0.1.6",
+  "packages": ["packages/@uvue/*", "packages/tests/*"],
+  "version": "0.2.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
