--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
-  "packages": ["packages/@uvue/*", "packages/tests/*"],
-  "version": "0.2.0",
+  "packages": [
+    "packages/@uvue/*",
+    "packages/tests/*"
+  ],
+  "version": "1.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
